// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagesCount rendering 1`] = `null`;

exports[`MessagesCount rendering 2`] = `
<div
  id="messages-records-count"
>
  <strong>
    10
    
     records
  </strong>
  <a
    className="btn btn-danger"
    href="#"
    id="messages-clear-button"
    onClick={[Function]}
  >
    CLEAR
  </a>
</div>
`;

exports[`MessagesCount rendering 3`] = `
<div
  id="messages-records-count"
>
  <strong>
    5
     (10)
     records
  </strong>
  <a
    className="btn btn-danger"
    href="#"
    id="messages-clear-button"
    onClick={[Function]}
  >
    CLEAR
  </a>
</div>
`;
